--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <!-- CONTENIDO 2 -->
         <div style="width: 20%; float: left; text-align: center;">
-            <img src="/img/camara.png" alt="logo" style="width: 70px;">
+            <img src="./img/camara.png" alt="logo" style="width: 70px;">
         </div>
 
         <!-- CONTENIDO 3 -->
@@ -96,7 +96,7 @@
         </div>
         <!-- CONTENEDOR PARA IMAGEN -->
         <div style="width: 50%; height: 250px; float: right;">
-            <img src="/img/imagen para html calle.jpeg" alt="foto banner" style=" width: 350px; height: 250px;">
+            <img src="./img/imagen para html calle.jpeg" alt="foto banner" style=" width: 350px; height: 250px;">
 
         </div>
 
@@ -119,7 +119,7 @@
 
             </div>
             <div style="width: 33.33%; float: left;">
-                <img src="/img/art-naruto-jiraiya-sannin.jpg" alt="Fotografia 1" width="100%">
+                <img src="./img/art-naruto-jiraiya-sannin.jpg" alt="Fotografia 1" width="100%">
                 <h3>Fotografia 1</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ipsum cupiditate perspiciatis quos
                     minima repudiandae sapiente, id architecto facilis numquam veniam repellendus doloribus rerum
@@ -127,7 +127,7 @@
 
             </div>
             <div style="width: 33.33%; float: left;">
-                <img src="/img/madara.jpg" alt="Fotografia 2" width="100%">
+                <img src="./img/madara.jpg" alt="Fotografia 2" width="100%">
                 <h3>Fotograia 2</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque sunt tenetur repellat, dolores dolore
                     voluptatem dolorum omnis animi cum atque maxime vel sed ut accusantium autem iste non id asperiores?
@@ -135,7 +135,7 @@
 
             </div>
             <div style="width: 33.33%; float: left;">
-                <img src="/img/itachi.jpg" alt="Fotografia 3" width="100%">
+                <img src="./img/itachi.jpg" alt="Fotografia 3" width="100%">
                 <h3>Fotograia 3</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum, doloribus nemo ad sequi quisquam
                     itaque? Aliquid sit excepturi cupiditate architecto, ab doloribus harum reprehenderit, praesentium
@@ -257,7 +257,7 @@
         <div>
             <div style="text-align: center;">
                 <!-- CONTENIDO 2 -->
-                    <img src="/img/camara.png" alt="logo" style="width: 70px;">
+                    <img src="./img/camara.png" alt="logo" style="width: 70px;">
 
             </div>
             <div>
@@ -305,5 +305,6 @@
 
     </footer>
 </body>
+
 
 </html>
