--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
                 </div>
                 <div style="width: 40%; float: left; background-color: #fda277; text-align: center;">
-                    <img src="/img/nueva-cuenta.png" alt=" Testimonio 1" width="25%">
+                    <img src="./img/nueva-cuenta.png" alt=" Testimonio 1" width="25%">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est quas accusantium cupiditate,
                         eveniet laboriosam nobis totam rem animi necessitatibus repudiandae a modi minima voluptatibus,
                         molestiae atque placeat soluta optio veniam.</p>
@@ -170,7 +170,7 @@
 
                 </div>
                 <div style="width: 40%; float: left; background-color: #fda277; text-align: center;">
-                    <img src="/img/nueva-cuenta.png" alt="Testimonio 2" width="25%">
+                    <img src="./img/nueva-cuenta.png" alt="Testimonio 2" width="25%">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur atque alias odit repellat
                         aspernatur repellendus rerum, id accusamus corrupti non ipsam minus quia consequuntur rem illum!
                         Perspiciatis qui assumenda perferendis.</p>
@@ -308,3 +308,4 @@
 
 
 </html>
+
